# robius-authentication

./: .gitignore  AuthenticationCallback.java  Cargo.toml  README.md  auth.h  build.rs  bundling.md  classes.dex  org.hello-world.authenticate.policy
.cargo/: config.toml
examples/: hello_world.rs
examples/makepad/: Cargo.toml
examples/makepad/src/: app.rs  main.rs
src/: error.rs  lib.rs  sys.rs  text.rs
src/sys/: android.rs  apple.rs  linux.rs  unsupported.rs  windows.rs
src/sys/android/: AuthenticationCallback.java  callback.rs  init.rs  mod.rs  test.rs
src/sys/windows/: fallback.rs  mod.rs
