[package]
name = "robius-authentication"
version = "0.1.0"
edition = "2021"
authors = [
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Project Robius Maintainers",
]
description = "Rust abstractions for multi-platform native authentication: biometrics, fingerprint, password, TouchID, FaceID, Windows Hello, etc."
documentation = "https://docs.rs/robius-authentication"
homepage = "https://robius.rs/"
keywords = ["robius", "authentication", "biometric", "password", "fingerprint"]
categories = ["os", "hardware-support", "api-bindings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/project-robius/robius-authentication"


[build-dependencies]
android-build = "0.1.0"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
log = "0.4.21"
robius-android-env = "0.1.0"

[target.'cfg(target_vendor = "apple")'.dependencies.block2]
version = "0.4.0"

[target.'cfg(any(target_vendor = "apple", target_os = "android", target_os = "linux"))'.dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["sync"]

[target.'cfg(target_vendor = "apple")'.dependencies.icrate]
version = "0.1.0"
features = [
    "Foundation_NSError",
    "Foundation_NSString",
    "LocalAuthentication",
    "LocalAuthentication_LAContext"
]

[target.'cfg(target_vendor = "apple")'.dependencies.objc2]
version = "0.5.0"
default-features = false

[target.'cfg(target_os = "linux")'.dependencies.polkit]
version = "=0.17.0"

[target.'cfg(target_os = "linux")'.dependencies.gio]
version = "=0.17.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54.0"
features = [
    "Foundation",
    "Security_Credentials_UI",
]

[dev-dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", rev = "59df422" }

#[[example]]
#name = "makepad"
#crate-type = ["cdylib"]
