[package]
name = "robius-authentication"
version = "0.1.0"
edition = "2021"
authors = [
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Project Robius Maintainers",
]
description = "Rust abstractions for multi-platform native authentication: biometrics, fingerprint, password, TouchID, FaceID, Windows Hello, etc."
documentation = "https://docs.rs/robius-authentication"
homepage = "https://robius.rs/"
keywords = ["robius", "authentication", "biometric", "password", "fingerprint"]
categories = ["os", "hardware-support", "api-bindings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/project-robius/robius-authentication"

[build-dependencies]
android-build = "0.1.0"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
log = "0.4.21"
robius-android-env = "0.1.0"

[target.'cfg(target_vendor = "apple")'.dependencies.block2]
version = "0.5.1"

[target.'cfg(any(target_vendor = "apple", target_os = "android"))'.dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["sync"]
optional = true

[target.'cfg(target_vendor = "apple")'.dependencies.objc2-local-authentication]
version = "0.2.2"
features = ["block2", "LAContext", "LAError"]

[target.'cfg(target_vendor = "apple")'.dependencies.objc2-foundation]
version = "0.2.2"
default-features = false
features = ["NSError", "NSString"]

[target.'cfg(target_vendor = "apple")'.dependencies.objc2]
version = "0.5.2"
default-features = false

[target.'cfg(target_os = "linux")'.dependencies.polkit]
version = "=0.17.0"

[target.'cfg(target_os = "linux")'.dependencies.gio]
version = "=0.17.0"

[target.'cfg(target_os = "windows")'.dependencies.retry]
version = "2.0.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = [
    # UWP
    "Foundation",
    "Security_Credentials_UI",
    # WinRT
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    # Fallback
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_UI_Input_KeyboardAndMouse",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-core]
version = "0.56.0"
default-features = false

[features]
default = []
async = ["dep:tokio"]
uwp = []
