[package]
name = "robius-authentication"
version = "0.2.0"
edition = "2021"
authors = [
    "Klim Tsoutsman <klim@tsoutsman.com>",
    "Kevin Boos <kevinaboos@gmail.com>",
    "Project Robius Maintainers",
]
description = "Rust abstractions for multi-platform native authentication: biometrics, fingerprint, password, screen lock, TouchID, FaceID, Windows Hello, etc."
documentation = "https://docs.rs/robius-authentication"
homepage = "https://robius.rs/"
keywords = ["robius", "authentication", "biometric", "password", "fingerprint"]
categories = ["os", "hardware-support", "api-bindings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/project-robius/robius-authentication"

[build-dependencies]
android-build = "0.1.0"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
robius-android-env = "0.2.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.1"
objc2-local-authentication = { version = "0.3.1", default-features = false, features = ["block2", "LAContext", "LAError"] }
objc2-foundation = { version = "0.3.1", default-features = false, features = ["NSError", "NSString"] }

## disabled for now, sync the `async` feature isn't fully implemented.
# [target.'cfg(any(target_vendor = "apple", target_os = "android"))'.dependencies.tokio]
# version = "1.35.1"
# default-features = false
# features = ["sync"]
# optional = true

[target.'cfg(target_os = "linux")'.dependencies]
polkit = "=0.17.0"
gio = "=0.17.0"

[target.'cfg(target_os = "windows")'.dependencies]
retry = "2.0.0"
windows-core = { version = "0.56.0", default-features = false }
windows = { version = "0.56.0", default-features = false, features = [
    # For UWP-based authentication.
    "Foundation",
    "Security_Credentials_UI",
    # WinRT
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT",
    # Fallback
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_UI_Input_KeyboardAndMouse",
]}


[features]
default = []
## This feature is not fully implemented yet, do not use it.
##
## Enable this feature to expose non-blocking asynchronous authentication APIs.
#async = ["dep:tokio"]

## Note: there is a UWP feature still in the code,
## but enabling it causes the app to freeze on Windows 11 Pro.
## Everything still works correctly without the UWP feature.
# uwp = []
